Fix CLS regression: font-display optional, promo bar critical CSS, image aspect-ratio
- Change font-display from swap to optional on all @font-face declarations
  (inline critical CSS + main.css) to eliminate font swap layout shifts
- Add promo bar and cookie consent positioning to inline critical CSS so
  they render correctly before async main.css loads
- Add aspect-ratio to who-i-help-image-mobile to reserve layout space

--- a/css/main.css
+++ b/css/main.css
@@ -11,7 +11,7 @@
   src: url('../fonts/PlayfairDisplay-Regular-subset.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -20,7 +20,7 @@
   src: url('../fonts/PlayfairDisplay-Italic-subset.woff2') format('woff2');
   font-weight: 400;
   font-style: italic;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -29,7 +29,7 @@
   src: url('../fonts/PlayfairDisplay-Bold-subset.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -38,7 +38,7 @@
   src: url('../fonts/Poppins-Light-subset.woff2') format('woff2');
   font-weight: 300;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -47,7 +47,7 @@
   src: url('../fonts/Poppins-Regular-subset.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -56,7 +56,7 @@
   src: url('../fonts/Poppins-Medium-subset.woff2') format('woff2');
   font-weight: 500;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -65,7 +65,7 @@
   src: url('../fonts/Poppins-SemiBold-subset.woff2') format('woff2');
   font-weight: 600;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -74,7 +74,7 @@
   src: url('../fonts/Poppins-Bold-subset.woff2') format('woff2');
   font-weight: 700;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -82,7 +82,7 @@
   src: url('../fonts/GlacialIndifference-Regular.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 @font-face {
@@ -91,7 +91,7 @@
   src: url('../fonts/BDScript-subset.woff2') format('woff2');
   font-weight: 400;
   font-style: normal;
-  font-display: swap;
+  font-display: optional;
 }
 
 /* -----------------------------------------
@@ -1816,6 +1816,7 @@ p {
     display: block;
     width: 194px;
     height: 259px;
+    aspect-ratio: 194 / 259;
     object-fit: cover;
     object-position: center top;
     border-radius: 12px;
